# Mirror-Rtype

./: .gitignore  BRANCH_TEST.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  SYNC_TEST.md  TEST_MIRRORING.md  bootstrap.py  main.cpp  readme.md  vcpkg.json
.github/workflows/: ci.yml  mirror-to-epitech.yml
Doc/: UDP_protocol.md
client/: README.md  client.hpp  lobby.cpp  main.cpp
docs/: Scripting.md  protocol.md
ecs/: component_manager.hpp  coordinator.hpp  ecs.hpp  entity_manager.hpp  example.hpp  types.hpp
ecs/core/: component_array.hpp  component_manager.hpp  coordinator.hpp  system.hpp  system_manager.hpp
ecs/game/: components.hpp  systems.hpp
ecs/network/: componentsN.hpp  systemsN.hpp
ecs/utils/: utils.cpp  utils.hpp
game/: CMakeLists.txt  components.hpp
game/client/: main.cpp
game/server/: main.cpp
lib/: CMakeLists.txt
lib/ecs/core/: coordinator.hpp  system.hpp  system_manager.hpp
lib/ecs/game/: systems.hpp
lib/network/includes/: compat.hpp  export.hpp  protocol.hpp  thread_utils.hpp  udpClient.hpp  udpServer.hpp
lib/network/src/: protocol.cpp  threadQueue.cpp  udpClient.cpp  udpServer.cpp
network/includes/: protocol.hpp  threadQueue.hpp  udpClient.hpp  udpServer.hpp
network/src/: protocol.cpp  udpClient.cpp  udpServer.cpp
scripting/include/: lua_bindings.hpp  script_engine.hpp
scripting/src/: lua_bindings.cpp  script_engine.cpp
scripts/: run_both.bat  run_client.bat  run_server.bat
scripts/enemies/: bydos_basic.lua  bydos_chaser.lua  bydos_wave.lua  turret.lua
scripts/libs/: patterns.lua
server/: game_server.cpp  main.cpp
tests/: test_ecs.cpp  test_udpclient.cpp
